# dataspawn

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
dataspawner/: data_spawner.py
example/: README.md  datacontract.yaml  example.py  requirements.txt
