[project]
name = "dataspawner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datacontract-cli==0.10.13",
    "Faker==30.3.0",
    "pyspark==3.5.3",
    "rstr==3.2.2",
]

[tool.uv]
dev-dependencies = [
    "mypy==1.11.2",
    "pre-commit==4.0.1",
    "pytest==8.3.3",
    "ruff==0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataspawner"]

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "D",   # pydocsstyle
    "I",   # re-order imports in alphabetic order
]

[tool.ruff.lint.pydocstyle]
convention = "google"
